@@ -5,6 +5,8 @@ Date: 14. 03. 2023
     - Military Supply: Added a new starter package that creates an optional additional challenge.
   Changes:
     - Military Supply: Changed how starter packages are implemented.  I don't expect anyone to care about this.
+    - Lab research speed technologies now use the vanilla lab's icon instead of the burner lab icon.
+    - Lab research speed 2 technology now has Logistic science pack technology as a prerequisite.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 11. 03. 2023
